--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==0.88.0
-torch==2.3.1
-torchvision==0.18.1
-efficientnet-pytorch==0.7.1
-scikit-learn==1.0.2
+efficientnet-pytorch==0.7.0
 Pillow==8.4.0
-tqdm==4.62.3
+requests==2.26.0
+streamlit==1.6.0
+torch==1.10.0
+torchvision==0.11.1
